[package]
name = "todo-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.6.0"
actix-web = "4.0.0-rc.1"
config = "0.11.0"
deadpool-postgres = {version="0.10.1", features=["serde"]}
dotenv = "0.15.0"
serde = {version = "1.0.136", features = ["derive"]}
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.8.1"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres ="0.7.5"

[dev-dependencies]
lazy_static = "1.4.0"
serde_json = "1.0.78"
